--- a/my-haskell-project.cabal
+++ b/my-haskell-project.cabal
@@ -32,15 +32,17 @@ executable algebra
   build-depends:       base >=4.7 && <5
   default-language:    Haskell2010
 
--- executable speed
---   main-is:             Speed.hs
---   build-depends:       base >= 4.7 && < 5
---   default-language:    Haskell2010
---
--- executable acceleration
---   main-is:             Acceleration.hs
---   build-depends:       base >= 4.7 && < 5
---  default-language:    Haskell2010
+executable speed
+  hs-source-dirs:      app, src
+  main-is:             Speed.hs
+  build-depends:       base >= 4.7 && < 5
+  default-language:    Haskell2010
+
+executable acceleration
+  hs-source-dirs:      app, src
+  main-is:             Acceleration.hs
+  build-depends:       base >= 4.7 && < 5
+  default-language:    Haskell2010
 
 -- NOTES:
 -- cabal build
