repair shell.nix and import it from flake.nix, remove default.nix

--- a/.envrc
+++ b/.envrc
@@ -3,3 +3,6 @@ use flake
 
 #export $LALA="hehe"
 #./scripts/setup.sh
+
+#direnv hook post_load echo "===> Haskell development environment loaded! <==="
+echo "===> Haskell development environment loaded! <=== .envrc"
