--- a/my-haskell-project.cabal
+++ b/my-haskell-project.cabal
@@ -54,16 +54,19 @@ executable speed
 --   nix build .#speed-tests
 test-suite speed-functions-test
   type:                exitcode-stdio-1.0
-  main-is:             SpeedFunctionsSpec.hs
+  -- main-is:             SpeedFunctionsSpec.hs
+  main-is:             Spec.hs
   -- test-module:         SpeedFunctionsTest
   -- other-modules:       SpeedFunctions, AnotherModule, YetAnotherModule
-  other-modules:       SpeedFunctions
+  other-modules:       SpeedFunctionsSpec
                      -- , SpeedFunctionsSpec
-  hs-source-dirs:      test, src
+  hs-source-dirs:      test
+  -- , src
   build-depends:       base >= 4.7 && <5,
                        hspec >= 2.7 && <3,
                        my-haskell-project,
                        silently
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 executable acceleration
